--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,18 @@
 			<version>13.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.faces</groupId>
+			<artifactId>javax.faces-api</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 
 
 	</dependencies>
